--- a/html/cart.html
+++ b/html/cart.html
@@ -18,13 +18,13 @@
 <body>
     <header class="header">
         <div class="header-left">
-            <h1 class="company-name"><a href="index.html">theRomeo`s <i class="fa-solid fa-laptop-code"></i> studio </a></h1>
+            <h1 class="company-name"><a href="../index.html">theRomeo`s <i class="fa-solid fa-laptop-code"></i> studio </a></h1>
 
         </div>
         <div class="header-right">
             <nav>
                 <ul class="nav-list">
-                    <li><a href="index.html" class="nav-link">Home</a></li>
+                    <li><a href="../index.html" class="nav-link">Home</a></li>
 
                 </ul>
             </nav>
