--- a/src/shop.html
+++ b/src/shop.html
@@ -26,9 +26,9 @@
         <div class="navbar__menu-container">
             <div class="navbar__menu-list">
                <a href="#">Shop</a></li>
-                <a href="src/about.html">About</a>
-                <a href="src/login.html">Login</a>
-                <a href="src/cart.html"><span class="cart__menu"><i class="fa fa-cart-plus"></i></span></a>
+                <a href="/src/about.html">About</a>
+                <a href="/src/login.html">Login</a>
+                <a href="/src/cart.html"><span class="cart__menu"><i class="fa fa-cart-plus"></i></span></a>
             </div>
             <div>    
                 <input class="menu-btn" type="checkbox" id="menu-btn" />
