--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="about">
             <h2 class="about__title">
                 We are here to help you fullfill your dreams
-                <a href="#" class="about__ankor" onclick="srcollToClass('product')"><i class="fa-solid fa-arrow-down"></i></a>
+                <span  class="about__ankor" onclick="srcollToClass('product')"><i class="fa-solid fa-arrow-down"></i></span>
             </h2>
     </section>
     <section class="product" id="product">
