Added logo in Login page

--- a/src/login.html
+++ b/src/login.html
@@ -15,7 +15,7 @@
             <div class="top-border">
             </div>
             <div class="logo-container">
-                <a href="/index.html" class="logo-container__logo"><img src="#" alt="Company logo"></a>
+                <a href="/index.html" class="logo-container__logo"><img src="/src/images/logo.png" alt="Company logo" class="login__logo"></a>
             </div>
         </div>
         <main class="login-main">
