xs screen fixed

--- a/html/cart-pay.html
+++ b/html/cart-pay.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
+<body class="cart-pay">
     <header class="header">
         <div class="header-left">
             <h1 class="company-name"><a href="../index.html">theRomeo`s <i class="fa-solid fa-laptop-code"></i> studio </a></h1>
