--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,8 @@
         </nav>
         <main>
             <section class="welcome">
-                <h1></h1>
+                <h1 class="welcome__header">Welcome to the coziest coffee shop!</h1>
+                <button class="welcome__btn">To The Shop</button>
             </section>
         </main>
         <footer>
