--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Coffee shop website">
     <meta name="keywords" content="coffee damalan">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -24,9 +24,8 @@
 <body>
     <div class="page-wrapper">
         <header>
-            <img src="./images/Icon Logo-06.png" alt="Shop's logo" class="header__logo">
-            <img src="./images/Text Logo-Color 2.png" alt="Shop's logo" class="header__logo-text">
-            <!-- <div class="header__search-bar"></div> -->
+            <img src="../images/Icon Logo-06.png" alt="Shop's logo" class="header__logo">
+            <img src="../images/Text Logo-Color 2.png" alt="Shop's logo" class="header__logo-text">
             <div class="header__cart"><a href="#"><i class="fa-solid fa-cart-shopping cart-icon"></i></a></div>
         </header>
         <nav>
