added item page, not completed and payment file

--- a/src/about.html
+++ b/src/about.html
@@ -28,7 +28,7 @@
                <a href="/src/shop.html">Shop</a></li>
                 <a href="#">About</a>
                 <a href="/src/login.html">Login</a>
-                <a href="src/cart.html"><span class="cart__menu"><i class="fa fa-cart-plus"></i></span></a>
+                <a href="/src/cart.html"><span class="cart__menu"><i class="fa fa-cart-plus"></i></span></a>
             </div>
             <div>    
                 <input class="menu-btn" type="checkbox" id="menu-btn" />
