--- a/src/shop.html
+++ b/src/shop.html
@@ -129,7 +129,7 @@
                                 <span class="item__details">Man-made Cashmere Wool, custom fit, 300 grams </span>
                                 <div class="small__rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 15</div>
                             </div>
-                            <div class="item__cart"><a href="/index.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
+                            <div class="item__cart"><a href="/src/item123.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                                 <span class="item__details">Man-made Cashmere Wool, custom fit, 300 grams </span>
                                 <div class="small__rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 29</div>
                             </div>
-                            <div class="item__cart"><a href="/index.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
+                            <div class="item__cart"><a href="/src/item123.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -155,7 +155,7 @@
                                 <span class="item__details">Man-made Cashmere Wool, custom fit, 300 grams </span>
                                 <div class="small__rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 15</div>
                             </div>
-                            <div class="item__cart"><a href="/index.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
+                            <div class="item__cart"><a href="/src/item123.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -168,7 +168,7 @@
                                 <span class="item__details">Man-made Cashmere Wool, custom fit, 300 grams </span>
                                 <div class="small__rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 29</div>
                             </div>
-                            <div class="item__cart"><a href="/index.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
+                            <div class="item__cart"><a href="/src/item123.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -181,7 +181,7 @@
                                 <span class="item__details">Man-made Cashmere Wool, custom fit, 300 grams </span>
                                 <div class="small__rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 15</div>
                             </div>
-                            <div class="item__cart"><a href="/index.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
+                            <div class="item__cart"><a href="/src/item123.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -194,7 +194,7 @@
                                 <span class="item__details">Man-made Cashmere Wool, custom fit, 300 grams </span>
                                 <div class="small__rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 29</div>
                             </div>
-                            <div class="item__cart"><a href="/index.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
+                            <div class="item__cart"><a href="/src/item123.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -207,7 +207,7 @@
                                 <span class="item__details">Man-made Cashmere Wool, custom fit, 300 grams </span>
                                 <div class="small__rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 15</div>
                             </div>
-                            <div class="item__cart"><a href="/index.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
+                            <div class="item__cart"><a href="/src/item123.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -220,7 +220,7 @@
                                 <span class="item__details">Man-made Cashmere Wool, custom fit, 300 grams </span>
                                 <div class="small__rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 29</div>
                             </div>
-                            <div class="item__cart"><a href="/index.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
+                            <div class="item__cart"><a href="/src/item123.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -233,7 +233,7 @@
                                 <span class="item__details">Man-made Cashmere Wool, custom fit, 300 grams </span>
                                 <div class="small__rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 15</div>
                             </div>
-                            <div class="item__cart"><a href="/index.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
+                            <div class="item__cart"><a href="/src/item123.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -246,7 +246,7 @@
                                 <span class="item__details">Man-made Cashmere Wool, custom fit, 300 grams </span>
                                 <div class="small__rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 29</div>
                             </div>
-                            <div class="item__cart"><a href="/index.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
+                            <div class="item__cart"><a href="/src/item123.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -259,7 +259,7 @@
                                 <span class="item__details">Man-made Cashmere Wool, custom fit, 300 grams </span>
                                 <div class="small__rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 15</div>
                             </div>
-                            <div class="item__cart"><a href="/index.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
+                            <div class="item__cart"><a href="/src/item123.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -272,7 +272,7 @@
                                 <span class="item__details">Man-made Cashmere Wool, custom fit, 300 grams </span>
                                 <div class="small__rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 29</div>
                             </div>
-                            <div class="item__cart"><a href="/index.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
+                            <div class="item__cart"><a href="/src/item123.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -285,7 +285,7 @@
                                 <span class="item__details">Man-made Cashmere Wool, custom fit, 300 grams </span>
                                 <div class="small__rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 15</div>
                             </div>
-                            <div class="item__cart"><a href="/index.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
+                            <div class="item__cart"><a href="/src/item123.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -298,7 +298,7 @@
                                 <span class="item__details">Man-made Cashmere Wool, custom fit, 300 grams </span>
                                 <div class="small__rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 29</div>
                             </div>
-                            <div class="item__cart"><a href="/index.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
+                            <div class="item__cart"><a href="/src/item123.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -311,7 +311,7 @@
                                 <span class="item__details">Man-made Cashmere Wool, custom fit, 300 grams </span>
                                 <div class="small__rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 15</div>
                             </div>
-                            <div class="item__cart"><a href="/index.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
+                            <div class="item__cart"><a href="/src/item123.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -324,7 +324,7 @@
                                 <span class="item__details">Man-made Cashmere Wool, custom fit, 300 grams </span>
                                 <div class="small__rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 29</div>
                             </div>
-                            <div class="item__cart"><a href="/index.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
+                            <div class="item__cart"><a href="/src/item123.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -337,7 +337,7 @@
                                 <span class="item__details">Man-made Cashmere Wool, custom fit, 300 grams </span>
                                 <div class="small__rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 15</div>
                             </div>
-                            <div class="item__cart"><a href="/index.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
+                            <div class="item__cart"><a href="/src/item123.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -350,7 +350,7 @@
                                 <span class="item__details">Man-made Cashmere Wool, custom fit, 300 grams </span>
                                 <div class="small__rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 29</div>
                             </div>
-                            <div class="item__cart"><a href="/index.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
+                            <div class="item__cart"><a href="/src/item123.html" alt="Add to cart"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                     </div>
