--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="banner container">
             <marquee class="banner__title" behavior="sliding" direction= "left" width="60%" height="100px">Valentine's Day Special Offer</marquee>
          
-            <img src="./unsplash8.jpg" alt="hotel pic" class="img" >
+            <img class="product__img" src="./unsplash8.jpg" alt="hotel pic" class="img" >
 
             <button class="btn btn__header">Click for Direct Booking</button>
         
