made the sign in page and arrow up

--- a/products/jwelerySet.html
+++ b/products/jwelerySet.html
@@ -28,7 +28,7 @@
         <div class="p__left">
         <span class="p__name"> <h1>minimalist jewellery set</h1></span>
         <span class="ring__price p__price"><h2><del>$2049</del> <br> Now $1849</h2></span>
-        <input class="p__amnt" type="number" style="width: 2em;" value="1" >
+        <input class="p__amnt" type="number" value="1" >
         <button type="button" class="buy__btn">Add to cart</button>
 
         </div> 
