--- a/products/ring.html
+++ b/products/ring.html
@@ -29,7 +29,7 @@
         <div class="p__left">
         <span class="ring__name p__name"> <h1>Diamond ring</h1></span>
         <span class="ring__price p__price"><h2><del>$1449</del> <br> Now $1349</h2></span>
-        <input class="p__amnt" type="number" style="width: 2em;" value="1" >
+        <input class="p__amnt" type="number" value="1" >
         <button type="button" class="buy__btn">Add to cart</button>
 
         </div> 
