--- a/products/signIn.html
+++ b/products/signIn.html
@@ -21,10 +21,17 @@
     />
 </head>
 <body>
-    this is a sign in  form<form action="get">
-<label for="email">
-    <input type="email">
-</label>
-    </form>
+  <main class="form">
+    <h2 class="form__header">Sign In</h2>
+
+<form class="form">
+  <label for="email">Email:</label><br>
+  <input type="email" id="email" name="email" value="email"><br>
+  <label for="password">password:</label><br>
+  <input type="password" id="password" name="password" value="password">
+  <br>
+  <button type="submit">Sign In</button>
+</form>
+  </main>
 </body>
 </html>
