made the sign up page

--- a/products/user-acount.html
+++ b/products/user-acount.html
@@ -21,6 +21,12 @@
     />
 </head>
 <body>
-    <div>this is user account page</div>
+  <main class="user__acnt">
+    <h2>Welcome to your account</h2>
+    <a href="#">My purchases</a>
+    <a href="#">My returns</a>
+    <a href="#">My profile</a>
+    <a href="#">Setting</a>
+  </main>
 </body>
 </html>
