--- a/products/signUp.html
+++ b/products/signUp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign up</title>
+    <title>Sign in</title>
     <link rel="stylesheet" href="/products/product-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,6 +21,24 @@
     />
 </head>
 <body>
-    
+  <main class="form">
+    <h2 class="form__header">Sign Up</h2>
+
+<form class="form">
+  <label for="name">Name:</label><br>
+  <input type="text" id="name" name="surname" value="name" required><br>
+
+  <label for="surname">Family Name:</label><br>
+  <input required type="text" id="surname" name="surname" value="family name"><br>
+
+  <label for="email">Email:</label><br>
+  <input required type="email" id="email" name="email" value="email"><br>
+  
+  <label for="password">password:</label><br>
+  <input required type="password" id="password" name="password" value="password">
+  <br>
+  <button type="submit">Sign In</button>
+</form>
+  </main>
 </body>
 </html>
