--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </p>
                 </div>
                 <div class="intro__link">
-                    <a href="#">Start here</a>
+                    <a href="/src/shop.html" class="index_btn">Start here</a>
                 </div>
             </div>
             <div class="main-container__sustainable background__img">
@@ -54,13 +54,9 @@
                         Thanks to careful and meticulous selection, we can take advantage of excellence in quality with total respect for nature. <br>
                     </p>
                 </div>
-                <div class="sustainable__link">
-                    <a href="#">Learn more</a>
+                <div class="sustainable__link intro__link">
+                    <a href="/src/about.html" class="index_btn">Learn more</a>
                 </div>
-            </div>
-            <div class="main-container__ambassador background__img">
-                <div class="ambassador__description"></div>
-                <div class="ambassador__link"></div>
             </div>
     </main>
     <footer>
